--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -4,17 +4,17 @@
 # documentation.
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
-
 name: Java CI with Gradle
 
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 permissions:
   contents: read
+  
+env:
+  S3_BUCKET_NAME: be-pair-000
 
 jobs:
   build:
@@ -28,11 +28,27 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
+        
     - name: Run chmod to make gradlew executable
       run: chmod +x ./gradlew
+        
     - name: Build with Gradle
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
         arguments: build
 
+    - name: Make zip file
+      run: zip -r ./practice-deploy.zip .
+      shell: bash
+    
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ap-northeast-2
+    
+    - name: Upload to S3
+      run: aws s3 cp --region ap-northeast-2 ./practice-deploy.zip s3://$S3_BUCKET_NAME/practice-deploy.zip
+    
         
