--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -51,4 +51,9 @@ jobs:
     - name: Upload to S3
       run: aws s3 cp --region ap-northeast-2 ./practice-deploy.zip s3://$S3_BUCKET_NAME/practice-deploy.zip
     
-        
+    - name: Code Deploy
+      run: >
+        aws deploy create-deployment --application-name be-pair-48
+        --deployment-config-name CodeDeployDefault.AllAtOnce
+        --deployment-group-name be-pair-48-group
+        --s3-location bucket=$S3_BUCKET_NAME,bundleType=zip,key=practice-deploy.zip
